--- a/style.css
+++ b/style.css
@@ -9,13 +9,19 @@ body {
 
 #outputDiv {
   margin-top: 150px;
-
 }
 
 #searchButton {
   margin: 5px;
-  
+  border: none;
+  background-color: #ffffff;
+  border-radius: 2px;
+  cursor: pointer;
+}
 
+#searchButton:hover{
+  background-color:#222728;
+  color:#ffffff;
 }
 
 .container {
